# FastApiToDo

./: .gitignore  README.md  database.db  package-lock.json  pyproject.toml
app/: config.py  dependencies.py  main.py
app/controllers/: note_controller.py  user_controller.py
app/database/: db_context.py  db_models.py
app/exceptions/: restapi_exception.py
app/models/: models.py
app/providers/: encryption_provider.py  jwt_provider.py  userProvider.py
app/routes/: __init__.py  auth_router.py  note_router.py  user_router.py
